k8s/overlays/ovh/wpss/env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  template:
    spec:
      containers:
        - name: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qxsms
spec:
  template:
    spec:
      imagePullSecrets:
        - name: docker-hub-itcdsp
      containers:
        - name: qxsms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  template:
    spec:
      imagePullSecrets:
        - name: docker-hub-itcdsp
      containers:
        - name: worker
