k8s/overlays/ovh/wpss/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  tls:
    - hosts:
        - opinionsurvey.org
      secretName: opinionsurvey.org
  rules:
  - host: opinionsurvey.org
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: qxsms
              port:
                number: 8000
